--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "bower": "^1.3.12",
     "bower-requirejs": "^1.1.2",
-    "express": "^4.10.4"
+    "express": "^4.10.4",
+    "requirejs": "^2.1.20",
+    "ws": "^0.8.0"
   }
 }
