--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bower-requirejs": "^1.1.2",
     "express": "^4.10.4",
     "requirejs": "^2.1.20",
+    "seedrandom": "^2.4.2",
     "ws": "^0.8.0"
   }
 }
